--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,15 +1,20 @@
 ---
+import { ArticleClient } from "../client/article";
+import Layout from "../components/layout.astro";
+import ArticleListItem from "../components/list/item.astro";
+
+const articles = await ArticleClient.findArticles();
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+<Layout title="">
+	<div>
+		<ul>
+			{articles.map(article => 
+				<>
+					<ArticleListItem article={article} />
+					<div class="divider"></div>
+				</>
+			)}
+		</ul>
+	</div>
+</Layout>
