--- a/src/components/layout.astro
+++ b/src/components/layout.astro
@@ -20,7 +20,7 @@ const { title } = Astro.props;
 		<Header />
         <!-- slotタグにクラスを適用するのは×  -->
         <div class="mx-auto mt-3 max-w-3xl px-4 sm:px-6 xl:max-w-5xl xl:px-0">
-            <slot class=""></slot>
+            <slot></slot>
         </div>
 	</body>
 </html>
