--- a/src/components/article/non-body.astro
+++ b/src/components/article/non-body.astro
@@ -17,14 +17,14 @@ const { post } = Astro.props;
             <div class="space-y-6">
                 <div>
                     <h2 class="text-2xl font-bold leading-8 tracking-tight mb-1">
-                        <a href={`/articles/${post.id}`}>{post.title}</a>
+                        <a href={`/posts/${post.id}`}>{post.title}</a>
                     </h2>
                     <div class="flex flex-wrap mb-4 space-x-2">
                         <Badge isPrimary={true} text={post.game.title} />
                         {post.tags.map(tag => <Badge text={tag} />)}
                     </div>
                     <div class="text-base font-medium leading-6">
-                        <a href={`/articles/${post.id}`}>Read more</a>
+                        <a href={`/posts/${post.id}`}>Read more</a>
                     </div>
                 </div>
             </div>
