記事一覧取得の際に本文を取得しない

--- a/src/components/article/non-body.astro
+++ b/src/components/article/non-body.astro
@@ -1,9 +1,9 @@
 ---
 import Badge from "../badge.astro";
-import type { Post } from "../../type";
+import type { PostMetaData } from "../../type";
 
 type Props = {
-    post: Post;
+    post: PostMetaData;
 }
 
 const { post } = Astro.props;
