--- a/src/components/list.astro
+++ b/src/components/list.astro
@@ -1,9 +1,9 @@
 ---
-import type { Post } from "../type";
+import type { PostMetaData } from "../type";
 import NonBodyArticle from "./article/non-body.astro";
 
 type Props = {
-    posts: Post[];
+    posts: PostMetaData[];
 }
 
 const { posts } = Astro.props;
