--- a/src/pages/posts/lor.astro
+++ b/src/pages/posts/lor.astro
@@ -4,7 +4,7 @@ import Layout from "../../components/layout.astro";
 import List from "../../components/list.astro";
 
 
-const posts = await PostClient.findPosts();
+const posts = await PostClient.findPostMetaData("lor");
 ---
 
 <Layout title="">
