ページネーションボタン修正

--- a/src/components/article/non-body.astro
+++ b/src/components/article/non-body.astro
@@ -24,7 +24,7 @@ const { post } = Astro.props;
                         {post.tags.map(tag => <Badge text={tag} />)}
                     </div>
                     <div class="text-base font-medium leading-6">
-                        <a href={`/posts/${post.id}`}>Read more</a>
+                        <a href={`/posts/${post.id}`}>続きを読む</a>
                     </div>
                 </div>
             </div>
