--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -11,8 +11,8 @@
                     </svg>   
                 </label>
                 <ul tabindex="0" class="menu menu-compact dropdown-content mt-3 p-2 shadow bg-base-100 rounded-box w-52">
-                    <li><a href="/posts/lor/1">Library of Ruina</a></li>
-                    <li><a href="/posts/lcb/1">Limbus Company</a></li>
+                    <li><a href="/posts/lor/1">Library of Ruinaの投稿</a></li>
+                    <li><a href="/posts/lcb/1">Limbus Companyの投稿</a></li>
                 </ul>
             </div>
         </div>
