--- a/src/components/list.astro
+++ b/src/components/list.astro
@@ -11,11 +11,11 @@ const { posts } = Astro.props;
 
 <ul>
     {posts.map(post => 
-        <>
+        <div class="mb-6">
             <li>
                 <NonBodyArticle post={post} />
             </li>
             <div class="divider"></div>
-        </>
+        </div>
     )}
 </ul>
