--- a/src/pages/posts/lor/[page].astro
+++ b/src/pages/posts/lor/[page].astro
@@ -3,6 +3,7 @@ import type { GetStaticPathsOptions } from "astro";
 import { PostClient } from "../../../client/post";
 import Layout from "../../../components/layout.astro";
 import List from "../../../components/list.astro";
+import Pagination from "../../../components/pagination.astro";
 
 export async function getStaticPaths({ paginate }: GetStaticPathsOptions) {
 	const posts = await PostClient.findPostMetaData("lor");
@@ -12,13 +13,16 @@ export async function getStaticPaths({ paginate }: GetStaticPathsOptions) {
 const { page } = Astro.props;
 ---
 
-<Layout title="">
-	<div>
+<Layout title="Library of Ruina | ">
+	<div class="mb-6">
 		<div class="divide-y divide-gray-200 dark:divide-gray-700">
 			<div class="space-y-2 pt-6 pb-8 md:space-y-5">
 				<h1 class="text-3xl font-extrabold">Library of Ruina</h1>
 			</div>
 		</div>
-		<List posts={page.data} />
+        {page.data.length && (
+            <List posts={page.data} />
+            <Pagination prev={page.url.prev} next={page.url.next} />
+        )}
 	</div>
 </Layout>
