サイト名修正

--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -1,7 +1,7 @@
 <header>
     <div class="navbar bg-base-100">
         <div class="flex flex-1">
-            <a href="/" class="btn btn-ghost normal-case text-xl">Title</a>
+            <a href="/" class="btn btn-ghost normal-case text-xl">プロムンゲーメモ</a>
         </div>
         <div class="flex-none">
             <div class="dropdown dropdown-end">
