--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import NonBodyArticle from "../components/article/non-body.astro";
 const posts = await PostClient.findLatestPostMetaData();
 ---
 
-<Layout title="">
+<Layout title="プロムンゲーメモ">
 	<div>
 		<div class="divide-y divide-gray-200 dark:divide-gray-700">
 			<div class="space-y-2 pt-6 pb-8 md:space-y-5">
