--- a/src/pages/posts/lcb/[page].astro
+++ b/src/pages/posts/lcb/[page].astro
@@ -13,7 +13,7 @@ export async function getStaticPaths({ paginate }: GetStaticPathsOptions) {
 const { page } = Astro.props;
 ---
 
-<Layout title="Limbus Company | ">
+<Layout title="Limbus Company | プロムンゲーメモ">
 	<div>
 		<div class="divide-y divide-gray-200 dark:divide-gray-700">
 			<div class="space-y-2 pt-6 pb-8 md:space-y-5">
