--- a/src/pages/posts/lor/[page].astro
+++ b/src/pages/posts/lor/[page].astro
@@ -13,7 +13,7 @@ export async function getStaticPaths({ paginate }: GetStaticPathsOptions) {
 const { page } = Astro.props;
 ---
 
-<Layout title="Library of Ruina | ">
+<Layout title="Library of Ruina | プロムンゲーメモ">
 	<div class="mb-6">
 		<div class="divide-y divide-gray-200 dark:divide-gray-700">
 			<div class="space-y-2 pt-6 pb-8 md:space-y-5">
