--- a/src/components/article/index.astro
+++ b/src/components/article/index.astro
@@ -1,5 +1,6 @@
 ---
 import type { Post } from "../../type";
+import Badge from "../badge.astro";
 
 type Props = {
     post: Post;
@@ -12,5 +13,33 @@ const { post } = Astro.props;
     <h1 class="text-3xl font-extrabold leading-9 tracking-tight dark:text-gray-100 sm:text-4xl sm:leading-10 md:text-5xl md:leading-14">
         {post.title}
     </h1>
-    <div class="prose" set:html={post.body}></div>
+    <div class="flex space-x-2">
+        <Badge isPrimary={true} text={post.game.title} />
+        {post.tags.map(tag => <Badge text={tag} />)}
+    </div>
+    <div class="markdown" set:html={post.body}></div>
 </article>
+
+<style is:global>
+
+/* Markdownの箇条書きはul・liに変換される */
+/* @apply "tailwindcssのクラス名"でスタイルを適用する */
+
+.markdown ul {
+    /* 箇条書き */
+    @apply list-disc;
+}
+
+.markdown h2 {
+    @apply text-2xl font-bold;
+}
+
+.markdown p {
+    
+}
+
+.markdown hr {
+    @apply border-solid;
+}
+
+</style>
