個別ページにmainタグ追加

--- a/src/pages/posts/[id].astro
+++ b/src/pages/posts/[id].astro
@@ -23,5 +23,9 @@ const { post } = Astro.props;
 ---
 
 <Layout title={`${post.title} | プロムンゲーメモ`}>
-    <Article post={post} />
+    <main class="mb-auto">
+        <div class="mx-auto max-w-3xl px-4 sm:px-6 xl:max-w-5xl xl:px-0">
+            <Article post={post} />
+        </div>
+    </main>
 </Layout>
