h1要素の真下に区切り線をつける

--- a/src/pages/posts/lcb/[page].astro
+++ b/src/pages/posts/lcb/[page].astro
@@ -15,9 +15,10 @@ const { page } = Astro.props;
 
 <Layout title="Limbus Company | プロムンゲーメモ">
 	<div>
-		<div class="divide-y divide-gray-200 dark:divide-gray-700">
+		<div>
 			<div class="space-y-2 pt-6 pb-8 md:space-y-5">
 				<h1 class="text-3xl font-extrabold">Limbus Company</h1>
+				<div class="divider"></div>
 			</div>
 		</div>
         {page.data.length && (
