--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,9 +8,10 @@ const posts = await PostClient.findLatestPostMetaData();
 
 <Layout title="プロムンゲーメモ">
 	<div>
-		<div class="divide-y divide-gray-200 dark:divide-gray-700">
+		<div>
 			<div class="space-y-2 pt-6 pb-8 md:space-y-5">
 				<h1 class="text-3xl font-extrabold">最近の投稿</h1>
+				<div class="divider"></div>
 			</div>
 		</div>
 		<ul>
