--- a/src/components/article/non-body.astro
+++ b/src/components/article/non-body.astro
@@ -12,7 +12,7 @@ const { post } = Astro.props;
 
 <article>
     <div class="space-y-2 xl:grid xl:grid-cols-4 xl:items-baseline xl:space-y-0">
-        <time>{post.revisedAt}</time>
+        <time class ="text-base font-medium leading-6 text-gray-400">{post.revisedAt}</time>
         <div class="space-y-5 xl:col-span-3">
             <div class="space-y-6">
                 <div>
