--- a/src/components/list.astro
+++ b/src/components/list.astro
@@ -1,6 +1,6 @@
 ---
 import type { PostMetaData } from "../type";
-import NonBodyArticle from "./article/non-body.astro";
+import Badge from "./badge.astro";
 
 type Props = {
     posts: PostMetaData[];
@@ -13,7 +13,27 @@ const { posts } = Astro.props;
     {posts.map(post => 
         <div class="mb-6">
             <li>
-                <NonBodyArticle post={post} />
+                <article>
+                    <div class="space-y-2 xl:grid xl:grid-cols-4 xl:items-baseline xl:space-y-0">
+                        <time class="text-base font-medium leading-6 text-gray-400">{post.revisedAt}</time>
+                        <div class="space-y-5 xl:col-span-3">
+                            <div class="space-y-6">
+                                <div>
+                                    <h2 class="text-2xl font-bold leading-8 tracking-tight mb-1">
+                                        <a href={`/posts/${post.id}`}>{post.title}</a>
+                                    </h2>
+                                    <div class="flex flex-wrap mb-4 space-x-2">
+                                        <Badge isPrimary={true} text={post.game.title} />
+                                        {post.tags.map(tag => <Badge text={tag} />)}
+                                    </div>
+                                    <div class="text-right text-base font-medium leading-6">
+                                        <a href={`/posts/${post.id}`}>続きを読む</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </article>
             </li>
             <div class="divider"></div>
         </div>
