--- a/src/pages/posts/[gameId]/[page].astro
+++ b/src/pages/posts/[gameId]/[page].astro
@@ -12,7 +12,7 @@ export async function getStaticPaths({ paginate }: GetStaticPathsOptions) {
 
     return GAMES.map(game => paginate(
         posts.filter(post => post.game.id === game.id),
-        { params: { gameId: game.id }, props: { game } }
+        { pazeSize: 5, params: { gameId: game.id }, props: { game } }
     ));
 }
 
