--- a/src/components/post.astro
+++ b/src/components/post.astro
@@ -11,7 +11,7 @@ const { post } = Astro.props;
 
 <article>
     <div class="space-y-1 pb-10 text-center">
-        <time>{post.revisedAt}</time>
+        <time class="text-base font-medium leading-6 text-gray-400>{post.revisedAt}</time>
         <h1
             class="text-3xl font-extrabold leading-9 tracking-tight sm:text-4xl sm:leading-10 md:text-5xl md:leading-14"
         >
