--- a/src/components/post.astro
+++ b/src/components/post.astro
@@ -31,18 +31,11 @@ const { post } = Astro.props;
     .markdown ul {
         @apply list-disc list-inside pl-4 mb-4;
     }
-    .markdown h1,
-    h2,
-    h3 {
+    .markdown h2, h3 {
         @apply font-bold mb-4;
     }
-    .markdown h1,
-    h2,
-    h3 {
+    .markdown h2, h3 {
         @apply border-b-2 border-solid border-base-content border-opacity-30;
-    }
-    .markdown h1 {
-        @apply text-3xl pb-2;
     }
     .markdown h2 {
         @apply text-2xl;
