--- a/src/components/post.astro
+++ b/src/components/post.astro
@@ -32,13 +32,13 @@ const { post } = Astro.props;
         @apply list-disc list-inside pl-4 mb-4;
     }
     .markdown h2, h3 {
-        @apply font-bold mb-4;
+        @apply font-bold;
     }
     .markdown h2 {
-        @apply text-2xl border-b-2 border-solid border-base-content border-opacity-10;
+        @apply mb-4 text-2xl border-b-2 border-solid border-base-content border-opacity-10;
     }
     .markdown h3 {
-        @apply text-lg;
+        @apply mb-2 text-lg;
     }
     .markdown p {
         @apply mb-4;
